# mutton

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
examples/: Makefile
examples/android_triangle/: Makefile  my-release-key.keystore
examples/android_triangle/src/: AndroidManifest.xml  App.c
examples/android_triangle_glfm/: Makefile
examples/android_triangle_mutton/src/: App.c
examples/android_triangle_touch/: Makefile  my-release-key.keystore
examples/android_triangle_touch/src/: AndroidManifest.xml
examples/desktop_triangle/: App.c  Makefile
examples/desktop_triangle_glfw/: Makefile
examples/desktop_triangle_mutton/: App.c
examples/hello_world/: App.c  Makefile
examples/hello_world/res/values/: strings.xml
examples/triangle/: App.c  Makefile
examples/triangle/res/values/: strings.xml
include/: mutton.h
include/application/: app.h  event.h
include/platform/: input_android.h  input_desktop.h  platform.h
include/utils/: Defs.h  String.h
lib/: Makefile
lib/intern/: defs.h  event.h  fileio.c  mutton.h  platform.c  platform_android.c  platform_desktop.c  string.c
lib/intern/input/: input_desktop.h
makefiles/: AndroidAPK.mk  AndroidToolchain.mk  Directories.mk  Executable.mk  Freetype.mk  GLFW.mk  Lib.mk  OS.mk
resources/: AndroidManifest.xml.template
src/application/: app.c  app_android.c  app_desktop.c
src/platform/: platform.c  platform_android.c  platform_desktop.c
src/utils/: Math.c  String.c
